<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.joseph.searching.MainActivity"
    android:background="#2cb1dd">


    <EditText
        android:id="@+id/txtsearch"
        android:hint="Search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:imeOptions="actionSearch"


        />

    <ListView
        android:padding="10dp"
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />



</LinearLayout>