<resources>
    <string name="app_name">getMotivated</string>
    <string name="name">User Name</string>
    <string name="password">Password</string>
    <string name="password1">Confirm Password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="newUForm">New User Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="group">Group</string>
    <string name="create">Create a Group</string>
    <string name="searchG">Look for Groups</string>
    <string name="uHome">Home Page</string>
    <string name="uGroup">Your Groups</string>

    <!-- Strings related to CreatNewGroup -->
    <string name="newGForm">Create New Group</string>
    <string name="groupname">Group Name</string>
    <string name="groupgoal">Group Description</string>
    <!-- Strings related to GroupActivity -->
    <string name="chat">Chat</string>
    <string name="join">Join</string>
    <string name="members">Members</string>
    <string name="quit">Leave</string>
    <string name="uUser">Group Members</string>

    <!-- Strings related to calendar-->
    <string name="customize">Customize</string>
    <string name="save">Save Changes</string>
    <string name="undo">Undo</string>
    <string name="title_activity_cal">Calendar</string>
    <string name="calDef">Click on a date to mark that day\'s goals as completed. Save changes to confirm.</string>

    <!-- Strings related to login -->
    <string name="error_invalid_email">This email address is not valid!</string>
    <string name="error_unconfirmed_password">Password entries must match!</string>
    <string name="error_invalid_password">Password must be at least 4 characters!</string>
    <string name="error_incorrect_password">This password is incorrect!</string>
    <string name="error_field_required">This field is required.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."</string>


</resources>
