<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreatGroupActivity"
    tools:showIn="@layout/activity_creat_group"
    android:background="#2cb1dd">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:background="#2cb1dd">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/newGForm"
            android:textSize="10pt"
            android:layout_weight="0.05">
        </TextView>
        <EditText
            android:layout_marginTop="10dp"
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/groupname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:layout_marginTop="15dp"
            android:inputType="textMultiLine"
            android:lines="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/groupgoal"
            android:ems="10"
            android:id="@+id/EditTextDesc"
            android:gravity="top|left"/>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/Submit"
            android:layout_height="36dp"
            android:text="@string/submit"
            android:onClick="submit"
            android:layout_width="fill_parent"
            android:layout_weight="0.10">
        </Button>
    </LinearLayout>
</RelativeLayout>
